--- a/3tier-good/ssh.cfg
+++ b/3tier-good/ssh.cfg
@@ -1,15 +1,13 @@
-Host bastion
-  Hostname bastion.b9f3.example.opentlc.com
-  IdentityFile /Users/tok/.ssh/ankay-labs.pem
-  ForwardAgent yes
-  User ankay-redhat.com
-  ControlMaster auto
-  ControlPath /tmp/%h-%r
-  ControlPersist 5
-  StrictHostKeyChecking no
+Host workstation-6f1d.rhpds.opentlc.com
+ Hostname workstation-6f1d.rhpds.opentlc.com
+ IdentityFile ~/.ssh/openstack.pem
+ ForwardAgent yes
+ User cloud-user
+ StrictHostKeyChecking no
+ PasswordAuthentication no
 
-Host *.b9f3.internal
-  User ec2-user
-  IdentityFile ./b9f3key.pem
-  ProxyCommand ssh bastion.b9f3.example.opentlc.com -W %h:%p
-  StrictHostKeyChecking no
+Host 10.10.10.*
+ User cloud-user
+ IdentityFile ~/.ssh/openstack.pem
+ ProxyCommand ssh -F ~/ssh.cfg cloud-user@workstation-6f1d.rhpds.opentlc.com -W %h:%p -vvv
+ StrictHostKeyChecking no
